<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <!-- button messages-->
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">NBA Scores</string>
    <string name="library">Digital Library</string>
    <string name="bigger">Build it Bigger</string>
    <string name="xyz">Cloud Reader</string>
    <string name="caps">Capstone</string>

    <string name="onClickMessage">"This will open my %1$s app!"</string>
    <string name="action_settings">Settings</string>
</resources>
