<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#FFFFFF">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textSize="28dp"
        android:typeface="sans"
        android:textColor="#303030"
        android:fontFamily="sans-serif-condensed-light" />

    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/spotify"
        android:id="@+id/button1"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:tag="@string/spotify"
        android:onClick="sendMessageOnClick"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/scores"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:tag="@string/scores"
        android:onClick="sendMessageOnClick"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/library"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:tag="@string/library"
        android:onClick="sendMessageOnClick"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/bigger"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:tag="@string/bigger"
        android:onClick="sendMessageOnClick"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/xyz"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:tag="@string/xyz"
        android:onClick="sendMessageOnClick"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/caps"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:tag="@string/caps"
        android:onClick="sendMessageOnClick"
        android:background="#03A9F4"
        android:fontFamily="sans-serif-condensed" />

</RelativeLayout>
